<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.extremecalculator.activities.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/appLightBlue"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/appWhite"
            android:textSize="@dimen/font_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_scientificCalculator"
                style="@style/MyTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scientificCalculatorButtonLabel"
                android:textSize="@dimen/font_xLarge" />

            <View
                android:layout_width="@dimen/margin_normal"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_volumeCalculator"
                style="@style/MyTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/volumeCalculatorButtonLabel"
                android:textSize="@dimen/font_xLarge" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_torqueCalculator"
                style="@style/MyTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/torqueCalculatorButtonLabel"
                android:textSize="@dimen/font_xLarge" />

            <View
                android:layout_width="@dimen/margin_normal"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_areaCalculator"
                style="@style/MyTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/areaCalculatorButtonLabel"
                android:textSize="@dimen/font_xLarge" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_speedDistanceTimeCalculator"
                style="@style/MyTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/speedDistanceTimeCalculatorButtonLabel"
                android:textSize="@dimen/font_xLarge" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
