<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.extremecalculator.activities.TorqueCalculatorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/appLightBlue">

        <ImageButton
            android:id="@+id/ib_screenBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/appTransparent"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_previous_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/torqueCalculatorScreenTitle"
            android:textColor="@color/appWhite"
            android:textSize="@dimen/font_large" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_xSmall"
                android:background="@drawable/gray_border_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_resultTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xSmall"
                    android:layout_marginTop="@dimen/margin_xSmall"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="Result : "
                    android:textColor="@color/appBlack"
                    android:textSize="@dimen/font_xSmall" />

                <TextView
                    android:id="@+id/tv_torqueResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_xSmall"
                    android:layout_marginLeft="@dimen/margin_xNormal"
                    android:layout_marginTop="@dimen/margin_xNormal"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="0000"
                    android:textColor="@color/appBlack"
                    android:textSize="@dimen/font_large"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin_xSmall"
                android:background="@color/appGray" />

            <RadioGroup
                android:id="@+id/rg_torqueSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appWhite"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_torque"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xNormal"
                    android:paddingBottom="@dimen/margin_normal"
                    android:paddingRight="@dimen/margin_normal"
                    android:paddingTop="@dimen/margin_normal"
                    android:text="@string/torqueRadioLabel"
                    android:textColor="@color/appBlack"
                    android:textSize="@dimen/font_normal" />

                <RadioButton
                    android:id="@+id/rb_force"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xNormal"
                    android:paddingBottom="@dimen/margin_normal"
                    android:paddingRight="@dimen/margin_normal"
                    android:paddingTop="@dimen/margin_normal"
                    android:text="@string/forceRadioLabel"
                    android:textColor="@color/appBlack"
                    android:textSize="@dimen/font_normal" />

                <RadioButton
                    android:id="@+id/rb_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_xNormal"
                    android:paddingBottom="@dimen/margin_normal"
                    android:paddingRight="@dimen/margin_normal"
                    android:paddingTop="@dimen/margin_normal"
                    android:text="@string/distanceRadioLabel"
                    android:textColor="@color/appBlack"
                    android:textSize="@dimen/font_normal" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/appBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_xSmall">

                <LinearLayout
                    android:id="@+id/ll_torqueView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_xSmall"
                    android:paddingTop="@dimen/margin_normal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/torqueTextLabel"
                        android:textColor="@color/appBlack"
                        android:textSize="@dimen/font_normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/appTorqueEditTextHeight"
                        android:layout_marginTop="@dimen/margin_xNormal"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_torqueValue"
                            android:layout_width="@dimen/appTorqueEditTextWidth"
                            android:layout_height="match_parent"
                            android:background="@drawable/gray_border_gray_bg"
                            android:digits="@string/allowDigitsForNumber"
                            android:gravity="center_vertical"
                            android:inputType="numberDecimal"
                            android:paddingLeft="@dimen/margin_small"
                            android:paddingRight="@dimen/margin_small"
                            android:textColor="@color/appBlack"
                            android:textSize="@dimen/font_normal" />

                        <TextView
                            android:id="@+id/tv_torqueScale"
                            android:layout_width="@dimen/appTorqueEditTextWidth"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_small"
                            android:background="@drawable/gray_border_blue_bg"
                            android:drawableLeft="@drawable/ic_action_expand"
                            android:drawablePadding="@dimen/margin_small"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/margin_xSmall"
                            android:singleLine="true"
                            android:textColor="@color/appBlack"
                            android:textSize="@dimen/font_normal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_forceView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_xSmall"
                    android:paddingTop="@dimen/margin_normal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forceTextLabel"
                        android:textColor="@color/appBlack"
                        android:textSize="@dimen/font_normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/appTorqueEditTextHeight"
                        android:layout_marginTop="@dimen/margin_xNormal"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_forceValue"
                            android:layout_width="@dimen/appTorqueEditTextWidth"
                            android:layout_height="match_parent"
                            android:background="@drawable/gray_border_gray_bg"
                            android:digits="@string/allowDigitsForNumber"
                            android:gravity="center_vertical"
                            android:inputType="numberDecimal"
                            android:paddingLeft="@dimen/margin_small"
                            android:paddingRight="@dimen/margin_small"
                            android:textColor="@color/appBlack"
                            android:textSize="@dimen/font_normal" />

                        <TextView
                            android:id="@+id/tv_forceScale"
                            android:layout_width="@dimen/appTorqueEditTextWidth"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_small"
                            android:background="@drawable/gray_border_blue_bg"
                            android:drawableLeft="@drawable/ic_action_expand"
                            android:drawablePadding="@dimen/margin_small"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/margin_xSmall"
                            android:singleLine="true"
                            android:textColor="@color/appBlack"
                            android:textSize="@dimen/font_normal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_distanceView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_xSmall"
                    android:paddingTop="@dimen/margin_normal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distanceTextLabel"
                        android:textColor="@color/appBlack"
                        android:textSize="@dimen/font_normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/appTorqueEditTextHeight"
                        android:layout_marginTop="@dimen/margin_xNormal"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_distanceValue"
                            android:layout_width="@dimen/appTorqueEditTextWidth"
                            android:layout_height="match_parent"
                            android:background="@drawable/gray_border_gray_bg"
                            android:digits="@string/allowDigitsForNumber"
                            android:gravity="center_vertical"
                            android:inputType="numberDecimal"
                            android:paddingLeft="@dimen/margin_small"
                            android:paddingRight="@dimen/margin_small"
                            android:textColor="@color/appBlack"
                            android:textSize="@dimen/font_normal" />

                        <TextView
                            android:id="@+id/tv_distanceScale"
                            android:layout_width="@dimen/appTorqueEditTextWidth"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_small"
                            android:background="@drawable/gray_border_blue_bg"
                            android:drawableLeft="@drawable/ic_action_expand"
                            android:drawablePadding="@dimen/margin_small"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/margin_xSmall"
                            android:singleLine="true"
                            android:textColor="@color/appBlack"
                            android:textSize="@dimen/font_normal" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/appGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_calculate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/margin_normal"
                    android:text="@string/calculateButtonLabel"
                    android:textColor="@color/appLightBlue"
                    android:textSize="@dimen/font_normal" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="@dimen/margin_xSmall"
                    android:background="@color/appGray" />

                <TextView
                    android:id="@+id/tv_clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/margin_normal"
                    android:text="@string/ClearButtonLabel"
                    android:textColor="@color/appLightBlue"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>